fixed list alignment issue

--- a/styles/card.css
+++ b/styles/card.css
@@ -2,7 +2,6 @@
   display: flex;
   border-radius: 5px;
   padding: 0.5rem;
-  margin: 0.5rem;
   background: #E3D3E4;
   box-shadow: 2px 2px 4px #000
 }
